{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 727,
  "lineage": "ef7b8253-be6e-dc67-02e9-53b1eb7ca786",
  "resources": [
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051171442365:security-group/sg-0e9ea19c37f1576fa",
            "description": "Security Group for EKS cluster",
            "egress": [],
            "id": "sg-0e9ea19c37f1576fa",
            "ingress": [],
            "name": "cluster",
            "name_prefix": "",
            "owner_id": "051171442365",
            "revoke_rules_on_delete": false,
            "tags": {
              "Attributes": "cluster",
              "Name": "cluster"
            },
            "tags_all": {
              "Attributes": "cluster",
              "Name": "cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-02791e16e019fcac7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress traffic",
            "from_port": 0,
            "id": "sgrule-2119195943",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e9ea19c37f1576fa",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051171442365:vpc/vpc-02791e16e019fcac7",
            "cidr_block": "172.16.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-06bd917a2ed81a83f",
                "cidr_block": "172.16.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-e7764a9d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02791e16e019fcac7",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-06499ff71478062a2",
            "ipv6_cidr_block": "2600:1f18:edc:ea00::/56",
            "main_route_table_id": "rtb-0c5a862faaa2729e7",
            "owner_id": "051171442365",
            "state": "available",
            "tags": {
              "kubernetes.io/cluster/cluster": "shared"
            }
          }
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-07da1a2caf53b994a",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-210-241-192.compute-1.amazonaws.com",
            "public_ip": "3.210.241.192",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Attributes": "private",
              "Name": "private-use1b",
              "cpco.io/subnet/type": "private",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "private-use1b",
              "cpco.io/subnet/type": "private",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc": true
          },
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-04033cc9a38b9ce0f",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-212-195-246.compute-1.amazonaws.com",
            "public_ip": "3.212.195.246",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Attributes": "private",
              "Name": "private-use1c",
              "cpco.io/subnet/type": "private",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "private-use1c",
              "cpco.io/subnet/type": "private",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07da1a2caf53b994a",
            "connectivity_type": "public",
            "id": "nat-0e649f7b125e9ad96",
            "network_interface_id": "eni-0c40cbbd69cac82e9",
            "private_ip": "172.16.105.170",
            "public_ip": "3.210.241.192",
            "subnet_id": "subnet-0ebaa46365c829a61",
            "tags": {
              "Attributes": "nat",
              "Name": "nat-use1b",
              "kubernetes.io/cluster/cluster": "shared"
            },
            "tags_all": {
              "Attributes": "nat",
              "Name": "nat-use1b",
              "kubernetes.io/cluster/cluster": "shared"
            }
          },
          "dependencies": [
            "module.subnets.aws_eip.default",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_eip.nat_ips",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04033cc9a38b9ce0f",
            "connectivity_type": "public",
            "id": "nat-02336fd457c3c37f1",
            "network_interface_id": "eni-071e006dbfdf2bda7",
            "private_ip": "172.16.122.39",
            "public_ip": "3.212.195.246",
            "subnet_id": "subnet-0193123b9d289cccc",
            "tags": {
              "Attributes": "nat",
              "Name": "nat-use1c",
              "kubernetes.io/cluster/cluster": "shared"
            },
            "tags_all": {
              "Attributes": "nat",
              "Name": "nat-use1c",
              "kubernetes.io/cluster/cluster": "shared"
            }
          },
          "dependencies": [
            "module.subnets.aws_eip.default",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_eip.nat_ips",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051171442365:network-acl/acl-01d53aa8eafb03663",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-01d53aa8eafb03663",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "051171442365",
            "subnet_ids": [
              "subnet-00300f4bf4869af35",
              "subnet-0039b161fa24fa8c1"
            ],
            "tags": {
              "Attributes": "private",
              "Name": "private",
              "cpco.io/subnet/type": "private",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "private",
              "cpco.io/subnet/type": "private",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02791e16e019fcac7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051171442365:network-acl/acl-0f6b7f59b7af6e299",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0f6b7f59b7af6e299",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "051171442365",
            "subnet_ids": [
              "subnet-0193123b9d289cccc",
              "subnet-0ebaa46365c829a61"
            ],
            "tags": {
              "Attributes": "public",
              "Name": "public",
              "cpco.io/subnet/type": "public",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "public",
              "cpco.io/subnet/type": "public",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02791e16e019fcac7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0dd9cc073c613f09e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e649f7b125e9ad96",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dd9cc073c613f09e",
            "state": "active",
            "timeouts": {
              "create": "2m",
              "delete": "5m"
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_eip.default",
            "module.subnets.aws_nat_gateway.default",
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_eip.nat_ips",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c0f99587fc58d9481080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02336fd457c3c37f1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c0f99587fc58d948",
            "state": "active",
            "timeouts": {
              "create": "2m",
              "delete": "5m"
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_eip.default",
            "module.subnets.aws_nat_gateway.default",
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_eip.nat_ips",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0287f72cd0b192135",
            "id": "r-rtb-0cdc8f320c99b3b151080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cdc8f320c99b3b15",
            "state": "active",
            "timeouts": {
              "create": "2m",
              "delete": "5m"
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051171442365:route-table/rtb-0dd9cc073c613f09e",
            "id": "rtb-0dd9cc073c613f09e",
            "owner_id": "051171442365",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "private",
              "Name": "private-use1b",
              "cpco.io/subnet/type": "private",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "private-use1b",
              "cpco.io/subnet/type": "private",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02791e16e019fcac7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051171442365:route-table/rtb-0c0f99587fc58d948",
            "id": "rtb-0c0f99587fc58d948",
            "owner_id": "051171442365",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "private",
              "Name": "private-use1c",
              "cpco.io/subnet/type": "private",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "private-use1c",
              "cpco.io/subnet/type": "private",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02791e16e019fcac7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051171442365:route-table/rtb-0cdc8f320c99b3b15",
            "id": "rtb-0cdc8f320c99b3b15",
            "owner_id": "051171442365",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "public",
              "Name": "public",
              "cpco.io/subnet/type": "public",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "public",
              "cpco.io/subnet/type": "public",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02791e16e019fcac7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0569b5266c4d9802f",
            "route_table_id": "rtb-0dd9cc073c613f09e",
            "subnet_id": "subnet-0039b161fa24fa8c1"
          },
          "dependencies": [
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1d28e539726203c",
            "route_table_id": "rtb-0c0f99587fc58d948",
            "subnet_id": "subnet-00300f4bf4869af35"
          },
          "dependencies": [
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d570242b196584dd",
            "route_table_id": "rtb-0cdc8f320c99b3b15",
            "subnet_id": "subnet-0ebaa46365c829a61"
          },
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d78c81bcc9440be4",
            "route_table_id": "rtb-0cdc8f320c99b3b15",
            "subnet_id": "subnet-0193123b9d289cccc"
          },
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051171442365:subnet/subnet-0039b161fa24fa8c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.0.0/20",
            "id": "subnet-0039b161fa24fa8c1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "051171442365",
            "tags": {
              "Attributes": "private",
              "Name": "private-use1b",
              "cpco.io/subnet/type": "private",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "private-use1b",
              "cpco.io/subnet/type": "private",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02791e16e019fcac7"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051171442365:subnet/subnet-00300f4bf4869af35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.16.0/20",
            "id": "subnet-00300f4bf4869af35",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "051171442365",
            "tags": {
              "Attributes": "private",
              "Name": "private-use1c",
              "cpco.io/subnet/type": "private",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "private-use1c",
              "cpco.io/subnet/type": "private",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02791e16e019fcac7"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051171442365:subnet/subnet-0ebaa46365c829a61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.96.0/20",
            "id": "subnet-0ebaa46365c829a61",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "051171442365",
            "tags": {
              "Attributes": "public",
              "Name": "public-use1b",
              "cpco.io/subnet/type": "public",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "public-use1b",
              "cpco.io/subnet/type": "public",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02791e16e019fcac7"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051171442365:subnet/subnet-0193123b9d289cccc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.112.0/20",
            "id": "subnet-0193123b9d289cccc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "051171442365",
            "tags": {
              "Attributes": "public",
              "Name": "public-use1c",
              "cpco.io/subnet/type": "public",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "public-use1c",
              "cpco.io/subnet/type": "public",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02791e16e019fcac7"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051171442365:security-group/sg-06de6cce39135ea40",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-06de6cce39135ea40",
            "ingress": [],
            "name": "default",
            "owner_id": "051171442365",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Default Security Group",
              "kubernetes.io/cluster/cluster": "shared"
            },
            "tags_all": {
              "Name": "Default Security Group",
              "kubernetes.io/cluster/cluster": "shared"
            },
            "vpc_id": "vpc-02791e16e019fcac7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051171442365:internet-gateway/igw-0287f72cd0b192135",
            "id": "igw-0287f72cd0b192135",
            "owner_id": "051171442365",
            "tags": {
              "kubernetes.io/cluster/cluster": "shared"
            },
            "tags_all": {
              "kubernetes.io/cluster/cluster": "shared"
            },
            "vpc_id": "vpc-02791e16e019fcac7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051171442365:vpc/vpc-02791e16e019fcac7",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0945071bedb2ab65c",
            "default_route_table_id": "rtb-0c5a862faaa2729e7",
            "default_security_group_id": "sg-06de6cce39135ea40",
            "dhcp_options_id": "dopt-e7764a9d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02791e16e019fcac7",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-06499ff71478062a2",
            "ipv6_cidr_block": "2600:1f18:edc:ea00::/56",
            "main_route_table_id": "rtb-0c5a862faaa2729e7",
            "owner_id": "051171442365",
            "tags": {
              "kubernetes.io/cluster/cluster": "shared"
            },
            "tags_all": {
              "kubernetes.io/cluster/cluster": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}